// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`web theme Alert base 1`] = `
Object {
  "Card": Object {
    "bg": undefined,
    "block": true,
    "borderColor": "gray12",
    "borderWidth": 1,
    "pb": 22,
    "pl": 24,
    "pr": 24,
    "pt": 20,
    "rounded": 12,
  },
  "Close": Object {
    "bgActive": "black16",
    "bgHover": "black8",
    "color": "gray28",
    "component": #IconCross,
    "pb": 8,
    "pl": 8,
    "position": "absolute",
    "pr": 8,
    "pt": 8,
    "right": 4,
    "rounded": "circle",
    "size": "s",
    "top": 4,
  },
  "Content": Object {
    "pb": 0,
    "pl": 0,
    "pr": 0,
    "pt": 0,
  },
  "Image": Object {
    "color": undefined,
    "mr": 18,
    "order": 0,
    "size": 28,
    "valignSelf": "top",
  },
}
`;

exports[`web theme Alert fuzz: column 1`] = `Object {}`;

exports[`web theme Alert fuzz: column=false 1`] = `Object {}`;

exports[`web theme Alert fuzz: variant="error" 1`] = `
Object {
  "Card": Object {
    "bg": "red100",
    "borderColor": "transparent",
  },
  "Image": Object {
    "color": "red500",
  },
}
`;

exports[`web theme Alert fuzz: variant="primary" 1`] = `
Object {
  "Card": Object {
    "bg": "blue50",
    "borderColor": "transparent",
  },
  "Image": Object {
    "color": "blue600",
  },
}
`;

exports[`web theme Alert fuzz: variant="secondary" 1`] = `
Object {
  "Card": Object {
    "bg": "gray4",
    "borderColor": "transparent",
  },
  "Image": Object {
    "color": "gray64",
  },
}
`;

exports[`web theme Alert fuzz: variant="success" 1`] = `
Object {
  "Card": Object {
    "bg": "green100",
    "borderColor": "transparent",
  },
  "Image": Object {
    "color": "green600",
  },
}
`;

exports[`web theme Alert fuzz: variant="warning" 1`] = `
Object {
  "Card": Object {
    "bg": "orange50",
    "borderColor": "transparent",
  },
  "Image": Object {
    "color": "orange700",
  },
}
`;

exports[`web theme Alert snap 1`] = `
Object {
  "mapProps": [Function],
  "scheme": Object {
    "Card": Array [
      Object {
        "block": true,
        "rounded": 12,
      },
      Object {
        "bg": [Function],
        "borderColor": [Function],
        "borderWidth": 1,
        "pb": 22,
        "pl": 24,
        "pr": 24,
        "pt": 20,
      },
    ],
    "Close": Array [
      Object {
        "bgActive": "black16",
        "bgHover": "black8",
        "color": "gray28",
        "component": #IconCross,
        "pb": 8,
        "pl": 8,
        "position": "absolute",
        "pr": 8,
        "pt": 8,
        "right": 4,
        "rounded": "circle",
        "size": "s",
        "top": 4,
      },
    ],
    "Content": Array [
      Object {
        "pb": 12,
        "pl": 12,
        "pr": 12,
        "pt": 12,
      },
      Object {
        "pb": 0,
        "pl": 0,
        "pr": 0,
        "pt": 0,
      },
    ],
    "Image": Array [
      Object {
        "order": [Function],
      },
      Object {
        "color": [Function],
        "mr": 18,
        "order": 0,
        "size": 28,
        "valignSelf": "top",
      },
    ],
  },
}
`;

exports[`web theme Avatar base 1`] = `
Object {
  "Fallback": Object {
    "component": #IconUser,
    "size": 9.6,
  },
  "Wrapper": Object {
    "align": "center",
    "color": "white",
    "fontSize": 12,
    "grow": false,
    "height": 20,
    "overlayDisabled": "rgba(255, 255, 255, 0.5)",
    "position": "relative",
    "shape": "circle",
    "shrink": false,
    "userSelect": false,
    "valignSelf": "middle",
    "width": 20,
  },
}
`;

exports[`web theme Avatar fuzz: isFallback 1`] = `
Object {
  "Wrapper": Object {
    "bg": "gray4",
    "color": "gray28",
    "valign": "middle",
  },
}
`;

exports[`web theme Avatar fuzz: isFallback=false 1`] = `Object {}`;

exports[`web theme Avatar fuzz: size=20 1`] = `Object {}`;

exports[`web theme Avatar fuzz: size=45 1`] = `
Object {
  "Fallback": Object {
    "size": 21.599999999999998,
  },
  "Wrapper": Object {
    "fontSize": 27,
    "height": 45,
    "width": 45,
  },
}
`;

exports[`web theme Avatar fuzz: size=60 1`] = `
Object {
  "Fallback": Object {
    "size": 28.799999999999997,
  },
  "Wrapper": Object {
    "fontSize": 36,
    "height": 60,
    "width": 60,
  },
}
`;

exports[`web theme Avatar fuzz: type="company" 1`] = `
Object {
  "Fallback": Object {
    "component": #IconCompanyUser,
  },
}
`;

exports[`web theme Avatar fuzz: type="person" 1`] = `Object {}`;

exports[`web theme Avatar fuzz: type="shop" 1`] = `
Object {
  "Fallback": Object {
    "component": #IconShopUser,
  },
}
`;

exports[`web theme Avatar snap 1`] = `
Object {
  "defaultProps": Object {
    "size": 20,
    "type": "person",
  },
  "mapProps": [Function],
  "scheme": Object {
    "Fallback": Array [
      Object {
        "component": #IconUser,
        "size": [Function],
      },
      Object {
        "$switch": "type",
        "company": Array [
          Object {
            "component": #IconCompanyUser,
          },
        ],
        "shop": Array [
          Object {
            "component": #IconShopUser,
          },
        ],
      },
    ],
    "Wrapper": Array [
      Object {
        "align": "center",
        "color": "white",
        "fontSize": [Function],
        "grow": false,
        "height": [Function],
        "overlayDisabled": "rgba(255, 255, 255, 0.5)",
        "position": "relative",
        "shape": "circle",
        "shrink": false,
        "userSelect": false,
        "valignSelf": "middle",
        "width": [Function],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "align": "center",
            "bg": "gray4",
            "color": "gray28",
            "valign": "middle",
          },
        ],
      },
    ],
  },
}
`;

exports[`web theme Badge base 1`] = `
Object {
  "Badge": Object {
    "align": "center",
    "bg": "red500",
    "color": "white",
    "cursor": "inherit",
    "fontSize": 12,
    "fontWeight": 600,
    "height": 20,
    "minWidth": 20,
    "pl": 6.5,
    "pr": 6.5,
    "shape": "circle",
    "userSelect": false,
    "zIndex": 2,
  },
}
`;

exports[`web theme Badge fuzz: size="l" 1`] = `
Object {
  "Badge": Object {
    "fontSize": 14,
    "height": 24,
    "minWidth": 24,
    "pl": 8,
    "pr": 8,
  },
}
`;

exports[`web theme Badge fuzz: size="l" kind="flat" 1`] = `
Object {
  "Badge": Object {
    "align": undefined,
    "bg": undefined,
    "color": undefined,
    "fontSize": 14,
    "fontWeight": undefined,
    "height": undefined,
    "minWidth": undefined,
    "pl": undefined,
    "pr": undefined,
    "shape": undefined,
  },
}
`;

exports[`web theme Badge fuzz: size="m" 1`] = `Object {}`;

exports[`web theme Badge fuzz: size="m" kind="flat" 1`] = `
Object {
  "Badge": Object {
    "align": undefined,
    "bg": undefined,
    "color": undefined,
    "fontWeight": undefined,
    "height": undefined,
    "minWidth": undefined,
    "pl": undefined,
    "pr": undefined,
    "shape": undefined,
  },
}
`;

exports[`web theme Badge fuzz: size="s" 1`] = `
Object {
  "Badge": Object {
    "fontSize": 11,
    "height": 14,
    "minWidth": 14,
    "pl": 3.5,
    "pr": 3.5,
  },
}
`;

exports[`web theme Badge fuzz: size="s" kind="flat" 1`] = `
Object {
  "Badge": Object {
    "align": undefined,
    "bg": undefined,
    "color": undefined,
    "fontSize": 11,
    "fontWeight": undefined,
    "height": undefined,
    "minWidth": undefined,
    "pl": undefined,
    "pr": undefined,
    "shape": undefined,
  },
}
`;

exports[`web theme Badge snap 1`] = `
Object {
  "defaultProps": Object {
    "animateChange": "wheel",
    "kind": "fill",
  },
  "mapProps": [Function],
  "scheme": Object {
    "Badge": Array [
      Object {
        "cursor": "inherit",
        "fontSize": [Function],
        "userSelect": false,
        "zIndex": 2,
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "align": "center",
            "bg": "red500",
            "color": "white",
            "fontWeight": 600,
            "height": [Function],
            "minWidth": [Function],
            "pl": [Function],
            "pr": [Function],
            "shape": "pill",
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "shape": "circle",
          },
        ],
      },
    ],
  },
}
`;

exports[`web theme Banner base 1`] = `
Object {
  "Card": Object {
    "block": true,
    "rounded": 12,
  },
  "Close": Object {
    "bgActive": "black16",
    "bgHover": "black8",
    "color": "gray28",
    "component": #IconCross,
    "pb": 8,
    "pl": 8,
    "position": "absolute",
    "pr": 8,
    "pt": 8,
    "right": 4,
    "rounded": "circle",
    "size": "s",
    "top": 4,
  },
  "Content": Object {
    "pb": 32,
    "pl": 32,
    "pr": 32,
    "pt": 28,
  },
  "Image": Object {
    "order": 1,
    "pb": 4,
    "pl": 4,
    "pr": 4,
    "pt": 4,
  },
}
`;

exports[`web theme Banner fuzz: column 1`] = `
Object {
  "Content": Object {
    "pb": 16,
    "pl": 16,
    "pr": 16,
    "pt": 12,
  },
  "Image": Object {
    "order": 0,
  },
}
`;

exports[`web theme Banner fuzz: column=false 1`] = `Object {}`;

exports[`web theme Banner snap 1`] = `
Object {
  "mapProps": [Function],
  "scheme": Object {
    "Card": Array [
      Object {
        "block": true,
        "rounded": 12,
      },
    ],
    "Close": Array [
      Object {
        "bgActive": "black16",
        "bgHover": "black8",
        "color": "gray28",
        "component": #IconCross,
        "pb": 8,
        "pl": 8,
        "position": "absolute",
        "pr": 8,
        "pt": 8,
        "right": 4,
        "rounded": "circle",
        "size": "s",
        "top": 4,
      },
    ],
    "Content": Array [
      Object {
        "pb": 12,
        "pl": 12,
        "pr": 12,
        "pt": 12,
      },
      Object {
        "pb": 32,
        "pl": 32,
        "pr": 32,
        "pt": 28,
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "pb": 16,
            "pl": 16,
            "pr": 16,
            "pt": 12,
          },
        ],
      },
    ],
    "Image": Array [
      Object {
        "order": [Function],
      },
      Object {
        "pb": 4,
        "pl": 4,
        "pr": 4,
        "pt": 4,
      },
    ],
  },
}
`;

exports[`web theme Button base 1`] = `
Object {
  "Button": Object {
    "bg": "white",
    "bgActive": "gray12",
    "bgDisabled": "white",
    "bgHover": "gray4",
    "borderColor": "gray20",
    "borderRadius": 5,
    "borderStyle": "solid",
    "borderWidth": 1,
    "color": "black",
    "focus": "blue100",
    "minHeight": "s",
    "pb": 5,
    "pl": 12,
    "pr": 12,
    "pt": 5,
    "shrink": false,
    "userSelect": false,
  },
  "IconAfter": Object {
    "size": "s",
  },
  "IconBefore": Object {
    "size": "s",
  },
  "Spinner": Object {
    "size": "s",
    "variant": "primary",
  },
  "Text": Object {
    "crop": true,
    "lineHeight": 1.1875,
    "ml": -1,
    "size": "s",
    "valignSelf": "middle",
  },
}
`;

exports[`web theme Button fuzz: children="text" preset="default" checked loading 1`] = `
Object {
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
}
`;

exports[`web theme Button fuzz: children="text" preset="default" checked loading=false 1`] = `
Object {
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
}
`;

exports[`web theme Button fuzz: children="text" preset="default" checked=false loading 1`] = `
Object {
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
}
`;

exports[`web theme Button fuzz: children="text" preset="default" checked=false loading=false 1`] = `
Object {
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
}
`;

exports[`web theme Button fuzz: children="text" preset="error" checked loading 1`] = `
Object {
  "Button": Object {
    "bg": "red500",
    "bgActive": "red700",
    "bgDisabled": "red500",
    "bgHover": "red600",
    "borderColor": "transparent",
    "color": "white",
    "focus": "red100",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`web theme Button fuzz: children="text" preset="error" checked loading=false 1`] = `
Object {
  "Button": Object {
    "bg": "red500",
    "bgActive": "red700",
    "bgDisabled": "red500",
    "bgHover": "red600",
    "borderColor": "transparent",
    "color": "white",
    "focus": "red100",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`web theme Button fuzz: children="text" preset="error" checked=false loading 1`] = `
Object {
  "Button": Object {
    "bg": "red500",
    "bgActive": "red700",
    "bgDisabled": "red500",
    "bgHover": "red600",
    "borderColor": "transparent",
    "color": "white",
    "focus": "red100",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`web theme Button fuzz: children="text" preset="error" checked=false loading=false 1`] = `
Object {
  "Button": Object {
    "bg": "red500",
    "bgActive": "red700",
    "bgDisabled": "red500",
    "bgHover": "red600",
    "borderColor": "transparent",
    "color": "white",
    "focus": "red100",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`web theme Button fuzz: children="text" preset="newDefault" checked loading 1`] = `
Object {
  "Button": Object {
    "bg": "gray8",
    "bgActive": "gray20",
    "bgDisabled": "gray8",
    "bgHover": "gray12",
    "borderColor": "transparent",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`web theme Button fuzz: children="text" preset="newDefault" checked loading=false 1`] = `
Object {
  "Button": Object {
    "bg": "gray8",
    "bgActive": "gray20",
    "bgDisabled": "gray8",
    "bgHover": "gray12",
    "borderColor": "transparent",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`web theme Button fuzz: children="text" preset="newDefault" checked=false loading 1`] = `
Object {
  "Button": Object {
    "bg": "gray8",
    "bgActive": "gray20",
    "bgDisabled": "gray8",
    "bgHover": "gray12",
    "borderColor": "transparent",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`web theme Button fuzz: children="text" preset="newDefault" checked=false loading=false 1`] = `
Object {
  "Button": Object {
    "bg": "gray8",
    "bgActive": "gray20",
    "bgDisabled": "gray8",
    "bgHover": "gray12",
    "borderColor": "transparent",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`web theme Button fuzz: children="text" preset="primary" checked loading 1`] = `
Object {
  "Button": Object {
    "bg": "blue500",
    "bgActive": "blue700",
    "bgDisabled": "blue500",
    "bgHover": "blue600",
    "borderColor": "transparent",
    "color": "white",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`web theme Button fuzz: children="text" preset="primary" checked loading=false 1`] = `
Object {
  "Button": Object {
    "bg": "blue500",
    "bgActive": "blue700",
    "bgDisabled": "blue500",
    "bgHover": "blue600",
    "borderColor": "transparent",
    "color": "white",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`web theme Button fuzz: children="text" preset="primary" checked=false loading 1`] = `
Object {
  "Button": Object {
    "bg": "blue500",
    "bgActive": "blue700",
    "bgDisabled": "blue500",
    "bgHover": "blue600",
    "borderColor": "transparent",
    "color": "white",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`web theme Button fuzz: children="text" preset="primary" checked=false loading=false 1`] = `
Object {
  "Button": Object {
    "bg": "blue500",
    "bgActive": "blue700",
    "bgDisabled": "blue500",
    "bgHover": "blue600",
    "borderColor": "transparent",
    "color": "white",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`web theme Button fuzz: children="text" preset="success" checked loading 1`] = `
Object {
  "Button": Object {
    "bg": "green500",
    "bgActive": "green700",
    "bgDisabled": "green500",
    "bgHover": "green600",
    "borderColor": "transparent",
    "color": "white",
    "focus": "green100",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`web theme Button fuzz: children="text" preset="success" checked loading=false 1`] = `
Object {
  "Button": Object {
    "bg": "green500",
    "bgActive": "green700",
    "bgDisabled": "green500",
    "bgHover": "green600",
    "borderColor": "transparent",
    "color": "white",
    "focus": "green100",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`web theme Button fuzz: children="text" preset="success" checked=false loading 1`] = `
Object {
  "Button": Object {
    "bg": "green500",
    "bgActive": "green700",
    "bgDisabled": "green500",
    "bgHover": "green600",
    "borderColor": "transparent",
    "color": "white",
    "focus": "green100",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`web theme Button fuzz: children="text" preset="success" checked=false loading=false 1`] = `
Object {
  "Button": Object {
    "bg": "green500",
    "bgActive": "green700",
    "bgDisabled": "green500",
    "bgHover": "green600",
    "borderColor": "transparent",
    "color": "white",
    "focus": "green100",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`web theme Button fuzz: children="text" preset="warning" checked loading 1`] = `
Object {
  "Button": Object {
    "bg": "orange500",
    "bgActive": "orange700",
    "bgDisabled": "orange500",
    "bgHover": "orange600",
    "borderColor": "transparent",
    "focus": "orange100",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`web theme Button fuzz: children="text" preset="warning" checked loading=false 1`] = `
Object {
  "Button": Object {
    "bg": "orange500",
    "bgActive": "orange700",
    "bgDisabled": "orange500",
    "bgHover": "orange600",
    "borderColor": "transparent",
    "focus": "orange100",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`web theme Button fuzz: children="text" preset="warning" checked=false loading 1`] = `
Object {
  "Button": Object {
    "bg": "orange500",
    "bgActive": "orange700",
    "bgDisabled": "orange500",
    "bgHover": "orange600",
    "borderColor": "transparent",
    "focus": "orange100",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`web theme Button fuzz: children="text" preset="warning" checked=false loading=false 1`] = `
Object {
  "Button": Object {
    "bg": "orange500",
    "bgActive": "orange700",
    "bgDisabled": "orange500",
    "bgHover": "orange600",
    "borderColor": "transparent",
    "focus": "orange100",
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "variant": undefined,
  },
}
`;

exports[`web theme Button fuzz: children=["line 1",{"type":"br","key":"","ref":null,"props":{},"_owner":null,"_store":{}},"line 2"] size="l" multiline 1`] = `
Object {
  "Button": Object {
    "minHeight": "l",
    "pb": 12,
    "pl": 18,
    "pr": 18,
    "pt": 12,
  },
  "IconAfter": Object {
    "mr": -4,
    "size": "m",
  },
  "IconBefore": Object {
    "ml": -4,
    "size": "m",
  },
  "Spinner": Object {
    "size": "l",
  },
  "Text": Object {
    "size": "l",
  },
}
`;

exports[`web theme Button fuzz: children=["line 1",{"type":"br","key":"","ref":null,"props":{},"_owner":null,"_store":{}},"line 2"] size="m" multiline 1`] = `
Object {
  "Button": Object {
    "minHeight": "m",
    "pb": 9,
    "pl": 16,
    "pr": 16,
    "pt": 9,
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "size": "m",
  },
  "Text": Object {
    "size": "m",
  },
}
`;

exports[`web theme Button fuzz: children=["line 1",{"type":"br","key":"","ref":null,"props":{},"_owner":null,"_store":{}},"line 2"] size="s" multiline 1`] = `
Object {
  "Button": Object {
    "pb": 9,
    "pt": 9,
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
}
`;

exports[`web theme Button fuzz: size="l" 1`] = `
Object {
  "Button": Object {
    "minHeight": "l",
    "pb": 11,
    "pl": 18,
    "pr": 18,
    "pt": 11,
  },
  "IconAfter": Object {
    "size": "m",
  },
  "IconBefore": Object {
    "size": "m",
  },
  "Spinner": Object {
    "size": "l",
  },
  "Text": Object {
    "size": "l",
  },
}
`;

exports[`web theme Button fuzz: size="l" children="text" 1`] = `
Object {
  "Button": Object {
    "minHeight": "l",
    "pb": 11,
    "pl": 18,
    "pr": 18,
    "pt": 11,
  },
  "IconAfter": Object {
    "mr": -4,
    "size": "m",
  },
  "IconBefore": Object {
    "ml": -4,
    "size": "m",
  },
  "Spinner": Object {
    "size": "l",
  },
  "Text": Object {
    "size": "l",
  },
}
`;

exports[`web theme Button fuzz: size="l" iconAfter={jsx} 1`] = `
Object {
  "Button": Object {
    "minHeight": "l",
    "pb": 11,
    "pl": 18,
    "pr": 18,
    "pt": 11,
  },
  "IconAfter": Object {
    "size": "m",
  },
  "IconBefore": Object {
    "size": "m",
  },
  "Spinner": Object {
    "size": "l",
  },
  "Text": Object {
    "align": "left",
    "mr": 8,
    "size": "l",
  },
}
`;

exports[`web theme Button fuzz: size="l" iconAfter={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "minHeight": "l",
    "pb": 11,
    "pl": 18,
    "pr": 18,
    "pt": 11,
  },
  "IconAfter": Object {
    "mr": -4,
    "size": "m",
  },
  "IconBefore": Object {
    "ml": -4,
    "size": "m",
  },
  "Spinner": Object {
    "size": "l",
  },
  "Text": Object {
    "align": "left",
    "mr": 8,
    "size": "l",
  },
}
`;

exports[`web theme Button fuzz: size="l" iconBefore={jsx} 1`] = `
Object {
  "Button": Object {
    "minHeight": "l",
    "pb": 11,
    "pl": 18,
    "pr": 18,
    "pt": 11,
  },
  "IconAfter": Object {
    "size": "m",
  },
  "IconBefore": Object {
    "size": "m",
  },
  "Spinner": Object {
    "size": "l",
  },
  "Text": Object {
    "align": "left",
    "ml": 8,
    "size": "l",
  },
}
`;

exports[`web theme Button fuzz: size="l" iconBefore={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "minHeight": "l",
    "pb": 11,
    "pl": 18,
    "pr": 18,
    "pt": 11,
  },
  "IconAfter": Object {
    "mr": -4,
    "size": "m",
  },
  "IconBefore": Object {
    "ml": -4,
    "size": "m",
  },
  "Spinner": Object {
    "size": "l",
  },
  "Text": Object {
    "align": "left",
    "ml": 8,
    "size": "l",
  },
}
`;

exports[`web theme Button fuzz: size="l" iconBefore={jsx} iconAfter={jsx} 1`] = `
Object {
  "Button": Object {
    "minHeight": "l",
    "pb": 11,
    "pl": 18,
    "pr": 18,
    "pt": 11,
  },
  "IconAfter": Object {
    "size": "m",
  },
  "IconBefore": Object {
    "size": "m",
  },
  "Spinner": Object {
    "size": "l",
  },
  "Text": Object {
    "align": "left",
    "ml": 8,
    "mr": 8,
    "size": "l",
  },
}
`;

exports[`web theme Button fuzz: size="l" iconBefore={jsx} iconAfter={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "minHeight": "l",
    "pb": 11,
    "pl": 18,
    "pr": 18,
    "pt": 11,
  },
  "IconAfter": Object {
    "mr": -4,
    "size": "m",
  },
  "IconBefore": Object {
    "ml": -4,
    "size": "m",
  },
  "Spinner": Object {
    "size": "l",
  },
  "Text": Object {
    "align": "left",
    "ml": 8,
    "mr": 8,
    "size": "l",
  },
}
`;

exports[`web theme Button fuzz: size="m" 1`] = `
Object {
  "Button": Object {
    "minHeight": "m",
    "pb": 8,
    "pl": 16,
    "pr": 16,
    "pt": 8,
  },
  "Spinner": Object {
    "size": "m",
  },
  "Text": Object {
    "size": "m",
  },
}
`;

exports[`web theme Button fuzz: size="m" children="text" 1`] = `
Object {
  "Button": Object {
    "minHeight": "m",
    "pb": 8,
    "pl": 16,
    "pr": 16,
    "pt": 8,
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "size": "m",
  },
  "Text": Object {
    "size": "m",
  },
}
`;

exports[`web theme Button fuzz: size="m" iconAfter={jsx} 1`] = `
Object {
  "Button": Object {
    "minHeight": "m",
    "pb": 8,
    "pl": 16,
    "pr": 16,
    "pt": 8,
  },
  "Spinner": Object {
    "size": "m",
  },
  "Text": Object {
    "align": "left",
    "mr": 6,
    "size": "m",
  },
}
`;

exports[`web theme Button fuzz: size="m" iconAfter={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "minHeight": "m",
    "pb": 8,
    "pl": 16,
    "pr": 16,
    "pt": 8,
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "size": "m",
  },
  "Text": Object {
    "align": "left",
    "mr": 6,
    "size": "m",
  },
}
`;

exports[`web theme Button fuzz: size="m" iconBefore={jsx} 1`] = `
Object {
  "Button": Object {
    "minHeight": "m",
    "pb": 8,
    "pl": 16,
    "pr": 16,
    "pt": 8,
  },
  "Spinner": Object {
    "size": "m",
  },
  "Text": Object {
    "align": "left",
    "ml": 6,
    "size": "m",
  },
}
`;

exports[`web theme Button fuzz: size="m" iconBefore={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "minHeight": "m",
    "pb": 8,
    "pl": 16,
    "pr": 16,
    "pt": 8,
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "size": "m",
  },
  "Text": Object {
    "align": "left",
    "ml": 6,
    "size": "m",
  },
}
`;

exports[`web theme Button fuzz: size="m" iconBefore={jsx} iconAfter={jsx} 1`] = `
Object {
  "Button": Object {
    "minHeight": "m",
    "pb": 8,
    "pl": 16,
    "pr": 16,
    "pt": 8,
  },
  "Spinner": Object {
    "size": "m",
  },
  "Text": Object {
    "align": "left",
    "ml": 6,
    "mr": 6,
    "size": "m",
  },
}
`;

exports[`web theme Button fuzz: size="m" iconBefore={jsx} iconAfter={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "minHeight": "m",
    "pb": 8,
    "pl": 16,
    "pr": 16,
    "pt": 8,
  },
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Spinner": Object {
    "size": "m",
  },
  "Text": Object {
    "align": "left",
    "ml": 6,
    "mr": 6,
    "size": "m",
  },
}
`;

exports[`web theme Button fuzz: size="s" 1`] = `Object {}`;

exports[`web theme Button fuzz: size="s" children="text" 1`] = `
Object {
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
}
`;

exports[`web theme Button fuzz: size="s" iconAfter={jsx} 1`] = `
Object {
  "Text": Object {
    "align": "left",
    "mr": 4,
  },
}
`;

exports[`web theme Button fuzz: size="s" iconAfter={jsx} children="text" 1`] = `
Object {
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Text": Object {
    "align": "left",
    "mr": 4,
  },
}
`;

exports[`web theme Button fuzz: size="s" iconBefore={jsx} 1`] = `
Object {
  "Text": Object {
    "align": "left",
    "ml": 4,
  },
}
`;

exports[`web theme Button fuzz: size="s" iconBefore={jsx} children="text" 1`] = `
Object {
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Text": Object {
    "align": "left",
    "ml": 4,
  },
}
`;

exports[`web theme Button fuzz: size="s" iconBefore={jsx} iconAfter={jsx} 1`] = `
Object {
  "Text": Object {
    "align": "left",
    "ml": 4,
    "mr": 4,
  },
}
`;

exports[`web theme Button fuzz: size="s" iconBefore={jsx} iconAfter={jsx} children="text" 1`] = `
Object {
  "IconAfter": Object {
    "mr": -4,
  },
  "IconBefore": Object {
    "ml": -4,
  },
  "Text": Object {
    "align": "left",
    "ml": 4,
    "mr": 4,
  },
}
`;

exports[`web theme Button snap 1`] = `
Object {
  "defaultProps": Object {
    "preset": "default",
    "pressedOffset": 1,
    "size": "s",
    "type": "button",
  },
  "mapProps": [Function],
  "scheme": Object {
    "Button": Array [
      Object {
        "borderColor": "transparent",
        "borderRadius": 5,
        "borderStyle": "solid",
        "borderWidth": 1,
        "focus": false,
        "minHeight": [Function],
        "pb": [Function],
        "pl": 16,
        "pr": 16,
        "pt": [Function],
        "shrink": false,
        "userSelect": false,
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "pl": 12,
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "pr": 12,
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "pb": 9,
            "pt": 9,
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "overlay": "rgba(255,255,255,0.5)",
          },
        ],
      },
      Object {
        "$switch": "size",
        "l": Array [
          Object {
            "pb": 11,
            "pl": 18,
            "pr": 18,
            "pt": 11,
          },
        ],
        "m": Array [
          Object {
            "pb": 8,
            "pl": 16,
            "pr": 16,
            "pt": 8,
          },
        ],
        "s": Array [
          Object {
            "pb": 5,
            "pl": 12,
            "pr": 12,
            "pt": 5,
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "pb": [Function],
            "pt": [Function],
          },
        ],
      },
      Object {
        "$switch": "preset",
        "default": Array [
          Object {
            "bg": "white",
            "bgActive": "gray12",
            "bgDisabled": "white",
            "bgHover": "gray4",
            "borderColor": "gray20",
            "color": "black",
            "focus": "blue100",
          },
        ],
        "error": Array [
          Object {
            "bg": "red500",
            "bgActive": "red700",
            "bgDisabled": "red500",
            "bgHover": "red600",
            "color": "white",
            "focus": "red100",
          },
        ],
        "newDefault": Array [
          Object {
            "bg": "gray8",
            "bgActive": "gray20",
            "bgDisabled": "gray8",
            "bgHover": "gray12",
            "color": "black",
            "focus": "blue100",
          },
        ],
        "primary": Array [
          Object {
            "bg": "blue500",
            "bgActive": "blue700",
            "bgDisabled": "blue500",
            "bgHover": "blue600",
            "color": "white",
            "focus": "blue100",
          },
        ],
        "success": Array [
          Object {
            "bg": "green500",
            "bgActive": "green700",
            "bgDisabled": "green500",
            "bgHover": "green600",
            "color": "white",
            "focus": "green100",
          },
        ],
        "warning": Array [
          Object {
            "bg": "orange500",
            "bgActive": "orange700",
            "bgDisabled": "orange500",
            "bgHover": "orange600",
            "color": "black",
            "focus": "orange100",
          },
        ],
      },
    ],
    "IconAfter": Array [
      Object {
        "size": [Function],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "mr": -4,
          },
        ],
      },
    ],
    "IconBefore": Array [
      Object {
        "size": [Function],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "ml": -4,
          },
        ],
      },
    ],
    "Spinner": Array [
      Object {
        "size": [Function],
      },
      Object {
        "variant": undefined,
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "variant": "primary",
          },
        ],
      },
    ],
    "Text": Array [
      Object {
        "crop": true,
        "ml": -1,
        "size": "m",
        "valignSelf": "middle",
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "ml": 6,
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "mr": 6,
          },
        ],
      },
      Object {
        "lineHeight": 1.1875,
        "size": [Function],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "align": "left",
            "ml": [Function],
          },
          Object {
            "$if": [Function],
            "$then": Array [
              Object {
                "ml": 10,
              },
            ],
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "align": "left",
            "mr": [Function],
          },
          Object {
            "$if": [Function],
            "$then": Array [
              Object {
                "mr": 10,
              },
            ],
          },
        ],
      },
    ],
  },
}
`;

exports[`web theme Card base 1`] = `
Object {
  "Card": Object {
    "block": true,
    "rounded": 12,
  },
  "Close": Object {
    "bgActive": "black16",
    "bgHover": "black8",
    "color": "gray28",
    "component": #IconCross,
    "pb": 8,
    "pl": 8,
    "position": "absolute",
    "pr": 8,
    "pt": 8,
    "right": 4,
    "rounded": "circle",
    "size": "s",
    "top": 4,
  },
  "Content": Object {
    "pb": 12,
    "pl": 12,
    "pr": 12,
    "pt": 12,
  },
  "Image": Object {
    "order": 1,
  },
}
`;

exports[`web theme Card fuzz: column 1`] = `
Object {
  "Image": Object {
    "order": 0,
  },
}
`;

exports[`web theme Card fuzz: column=false 1`] = `Object {}`;

exports[`web theme Card snap 1`] = `
Object {
  "mapProps": [Function],
  "scheme": Object {
    "Card": Array [
      Object {
        "block": true,
        "rounded": 12,
      },
    ],
    "Close": Array [
      Object {
        "bgActive": "black16",
        "bgHover": "black8",
        "color": "gray28",
        "component": #IconCross,
        "pb": 8,
        "pl": 8,
        "position": "absolute",
        "pr": 8,
        "pt": 8,
        "right": 4,
        "rounded": "circle",
        "size": "s",
        "top": 4,
      },
    ],
    "Content": Array [
      Object {
        "pb": 12,
        "pl": 12,
        "pr": 12,
        "pt": 12,
      },
    ],
    "Image": Array [
      Object {
        "order": [Function],
      },
    ],
  },
}
`;

exports[`web theme Checkbox base 1`] = `
Object {
  "Icon": Object {},
  "Label": Object {
    "ml": 6,
    "size": "s",
    "valignSelf": "middle",
  },
  "Switch": Object {
    "adjacentSelector": "input",
    "bg": "white",
    "bgDisabled": "gray4",
    "borderColor": "gray20",
    "borderColorDisabled": "gray20",
    "borderColorHover": "gray28",
    "borderRadius": 3,
    "borderStyle": "solid",
    "borderWidth": 1,
    "color": "white",
    "colorDisabled": "gray4",
    "focus": true,
    "height": 16,
    "shape": undefined,
    "shrink": false,
    "userSelect": false,
    "variant": "primary",
  },
  "Toggle": Object {
    "cursor": "pointer",
    "userSelect": false,
    "valign": "baseline",
  },
}
`;

exports[`web theme Checkbox fuzz: checked indeterminate 1`] = `
Object {
  "Icon": Object {
    "component": #IconCheckboxIndeterminate,
  },
  "Switch": Object {
    "bg": "blue500",
    "bgDisabled": "gray20",
    "bgHover": "blue600",
    "borderColor": "blue500",
    "borderColorHover": "blue600",
  },
}
`;

exports[`web theme Checkbox fuzz: checked indeterminate=false 1`] = `
Object {
  "Icon": Object {
    "component": #IconCheckboxChecked,
  },
  "Switch": Object {
    "bg": "blue500",
    "bgDisabled": "gray20",
    "bgHover": "blue600",
    "borderColor": "blue500",
    "borderColorHover": "blue600",
  },
}
`;

exports[`web theme Checkbox fuzz: checked variant="error" 1`] = `
Object {
  "Icon": Object {
    "component": #IconCheckboxChecked,
  },
  "Switch": Object {
    "bg": "red500",
    "bgDisabled": "gray20",
    "bgHover": "red600",
    "borderColor": "red500",
    "borderColorHover": "red600",
    "variant": "error",
  },
}
`;

exports[`web theme Checkbox fuzz: checked variant="primary" 1`] = `
Object {
  "Icon": Object {
    "component": #IconCheckboxChecked,
  },
  "Switch": Object {
    "bg": "blue500",
    "bgDisabled": "gray20",
    "bgHover": "blue600",
    "borderColor": "blue500",
    "borderColorHover": "blue600",
  },
}
`;

exports[`web theme Checkbox fuzz: checked variant="secondary" 1`] = `
Object {
  "Icon": Object {
    "component": #IconCheckboxChecked,
  },
  "Switch": Object {
    "bg": "blue500",
    "bgDisabled": "gray20",
    "bgHover": "blue600",
    "borderColor": "blue500",
    "borderColorHover": "blue600",
    "variant": "secondary",
  },
}
`;

exports[`web theme Checkbox fuzz: checked variant="success" 1`] = `
Object {
  "Icon": Object {
    "component": #IconCheckboxChecked,
  },
  "Switch": Object {
    "bg": "green500",
    "bgDisabled": "gray20",
    "bgHover": "green600",
    "borderColor": "green500",
    "borderColorHover": "green600",
    "variant": "success",
  },
}
`;

exports[`web theme Checkbox fuzz: checked variant="warning" 1`] = `
Object {
  "Icon": Object {
    "component": #IconCheckboxChecked,
  },
  "Switch": Object {
    "bg": "orange500",
    "bgDisabled": "gray20",
    "bgHover": "orange600",
    "borderColor": "orange500",
    "borderColorHover": "orange600",
    "variant": "warning",
  },
}
`;

exports[`web theme Checkbox fuzz: checked=false indeterminate 1`] = `
Object {
  "Icon": Object {
    "component": #IconCheckboxIndeterminate,
  },
}
`;

exports[`web theme Checkbox fuzz: checked=false indeterminate=false 1`] = `Object {}`;

exports[`web theme Checkbox fuzz: checked=false variant="error" 1`] = `
Object {
  "Switch": Object {
    "borderColor": "red500",
    "borderColorHover": "red600",
    "variant": "error",
  },
}
`;

exports[`web theme Checkbox fuzz: checked=false variant="primary" 1`] = `Object {}`;

exports[`web theme Checkbox fuzz: checked=false variant="secondary" 1`] = `
Object {
  "Switch": Object {
    "borderColor": "gray8",
    "borderColorHover": "gray16",
    "variant": "secondary",
  },
}
`;

exports[`web theme Checkbox fuzz: checked=false variant="success" 1`] = `
Object {
  "Switch": Object {
    "borderColor": "green500",
    "borderColorHover": "green600",
    "variant": "success",
  },
}
`;

exports[`web theme Checkbox fuzz: checked=false variant="warning" 1`] = `
Object {
  "Switch": Object {
    "borderColor": "orange500",
    "borderColorHover": "orange600",
    "variant": "warning",
  },
}
`;

exports[`web theme Checkbox fuzz: size="l" 1`] = `
Object {
  "Label": Object {
    "ml": 8,
    "size": "l",
  },
  "Switch": Object {
    "height": 22,
  },
}
`;

exports[`web theme Checkbox fuzz: size="m" 1`] = `
Object {
  "Label": Object {
    "ml": 8,
    "size": "m",
  },
  "Switch": Object {
    "height": 18,
  },
}
`;

exports[`web theme Checkbox fuzz: size="s" 1`] = `Object {}`;

exports[`web theme Checkbox snap 1`] = `
Object {
  "defaultProps": Object {
    "labelPosition": "end",
    "size": "s",
    "variant": "primary",
  },
  "mapProps": [Function],
  "scheme": Object {
    "Icon": Array [
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "component": #IconCheckboxChecked,
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "component": #IconCheckboxIndeterminate,
          },
        ],
      },
    ],
    "Label": Array [
      Object {
        "size": "m",
      },
      Object {
        "size": [Function],
        "valignSelf": "middle",
      },
      Object {
        "$switch": "labelPosition",
        "end": Array [
          Object {
            "ml": [Function],
          },
        ],
        "start": Array [
          Object {
            "mr": [Function],
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "color": "gray40",
          },
        ],
      },
    ],
    "Switch": Array [
      Object {
        "adjacentSelector": "input",
        "shape": [Function],
        "shrink": false,
        "userSelect": false,
        "variant": [Function],
      },
      Object {
        "bg": "white",
        "borderColorDisabled": "gray20",
        "borderStyle": "solid",
        "borderWidth": 1,
        "colorDisabled": "gray4",
        "focus": true,
      },
      Object {
        "$switch": "variant",
        "error": Array [
          Object {
            "borderColor": "red500",
            "borderColorHover": "red600",
          },
        ],
        "primary": Array [
          Object {
            "borderColor": "gray20",
            "borderColorHover": "gray28",
          },
        ],
        "secondary": Array [
          Object {
            "borderColor": "gray8",
            "borderColorHover": "gray16",
          },
        ],
        "success": Array [
          Object {
            "borderColor": "green500",
            "borderColorHover": "green600",
          },
        ],
        "warning": Array [
          Object {
            "borderColor": "orange500",
            "borderColorHover": "orange600",
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "bgDisabled": "gray20",
          },
          Object {
            "$switch": "variant",
            "error": Array [
              Object {
                "bg": "red500",
                "bgHover": "red600",
                "borderColor": "red500",
                "borderColorHover": "red600",
              },
            ],
            "primary": Array [
              Object {
                "bg": "blue500",
                "bgHover": "blue600",
                "borderColor": "blue500",
                "borderColorHover": "blue600",
              },
            ],
            "secondary": Array [
              Object {
                "bg": "blue500",
                "bgHover": "blue600",
                "borderColor": "blue500",
                "borderColorHover": "blue600",
              },
            ],
            "success": Array [
              Object {
                "bg": "green500",
                "bgHover": "green600",
                "borderColor": "green500",
                "borderColorHover": "green600",
              },
            ],
            "warning": Array [
              Object {
                "bg": "orange500",
                "bgHover": "orange600",
                "borderColor": "orange500",
                "borderColorHover": "orange600",
              },
            ],
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "bgDisabled": "gray4",
          },
        ],
      },
      Object {
        "borderRadius": 3,
        "color": "white",
        "height": [Function],
      },
    ],
    "Toggle": Array [
      Object {
        "userSelect": false,
        "valign": "baseline",
      },
      Object {
        "cursor": "pointer",
      },
    ],
  },
}
`;

exports[`web theme Icon base 1`] = `
Object {
  "Icon": Object {
    "color": undefined,
    "height": undefined,
    "shrink": false,
    "valignSelf": "middle",
  },
}
`;

exports[`web theme Icon fuzz: size="l" 1`] = `
Object {
  "Icon": Object {
    "height": 28,
  },
}
`;

exports[`web theme Icon fuzz: size="m" 1`] = `
Object {
  "Icon": Object {
    "height": 20,
  },
}
`;

exports[`web theme Icon fuzz: size="s" 1`] = `
Object {
  "Icon": Object {
    "height": 16,
  },
}
`;

exports[`web theme Icon fuzz: size="xl" 1`] = `
Object {
  "Icon": Object {
    "height": 28,
  },
}
`;

exports[`web theme Icon fuzz: variant="error" 1`] = `
Object {
  "Icon": Object {
    "color": "red500",
  },
}
`;

exports[`web theme Icon fuzz: variant="primary" 1`] = `
Object {
  "Icon": Object {
    "color": "blue500",
  },
}
`;

exports[`web theme Icon fuzz: variant="secondary" 1`] = `
Object {
  "Icon": Object {
    "color": "gray52",
  },
}
`;

exports[`web theme Icon fuzz: variant="success" 1`] = `
Object {
  "Icon": Object {
    "color": "green500",
  },
}
`;

exports[`web theme Icon fuzz: variant="warning" 1`] = `
Object {
  "Icon": Object {
    "color": "yellow500",
  },
}
`;

exports[`web theme Icon snap 1`] = `
Object {
  "mapProps": [Function],
  "scheme": Object {
    "Icon": Array [
      Object {
        "color": [Function],
        "height": [Function],
        "shrink": false,
        "valignSelf": "middle",
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "height": [Function],
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "height": 28,
          },
        ],
      },
    ],
  },
}
`;

exports[`web theme Image base 1`] = `
Object {
  "Image": Object {
    "height": "auto",
    "maxWidth": 1,
  },
}
`;

exports[`web theme Image snap 1`] = `
Object {
  "mapProps": [Function],
  "scheme": Object {
    "Image": Array [
      Object {
        "height": "auto",
        "maxWidth": 1,
      },
    ],
  },
}
`;

exports[`web theme Input base 1`] = `
Object {
  "IconAfter": Object {
    "color": "gray28",
    "ml": 7,
    "size": "m",
  },
  "IconBefore": Object {
    "color": "gray28",
    "mr": 7,
    "size": "s",
  },
  "Input": Object {
    "bgDisabled": "gray4",
    "borderColor": "gray20",
    "borderColorHover": "gray28",
    "borderRadius": 3,
    "borderStyle": "solid",
    "borderWidth": 1,
    "color": "black",
    "colorDisabled": "gray64",
    "cursor": "text",
    "focus": true,
    "fontSize": "s",
    "height": "s",
    "pl": 7,
    "placeholderColor": "gray40",
    "pr": 7,
    "width": 1,
  },
  "InputField": Object {
    "grow": true,
    "valign": "middle",
  },
  "Postfix": Object {
    "ml": 4,
  },
  "Prefix": Object {
    "mr": 4,
  },
}
`;

exports[`web theme Input fuzz: clearable="always" 1`] = `
Object {
  "IconAfter": Object {
    "area": 10,
    "component": #IconCross,
  },
}
`;

exports[`web theme Input fuzz: size="l" 1`] = `
Object {
  "IconAfter": Object {
    "ml": 12,
    "size": "l",
  },
  "IconBefore": Object {
    "mr": 12,
    "size": "m",
  },
  "Input": Object {
    "fontSize": "l",
    "height": "l",
    "pl": 12,
    "pr": 12,
  },
  "Prefix": Object {
    "mr": 8,
  },
}
`;

exports[`web theme Input fuzz: size="l" iconAfter={jsx} 1`] = `
Object {
  "IconAfter": Object {
    "ml": 12,
    "size": "l",
  },
  "IconBefore": Object {
    "mr": 12,
    "size": "m",
  },
  "Input": Object {
    "fontSize": "l",
    "height": "l",
    "pl": 12,
    "pr": 12,
  },
  "Prefix": Object {
    "mr": 8,
  },
}
`;

exports[`web theme Input fuzz: size="l" iconBefore={jsx} 1`] = `
Object {
  "IconAfter": Object {
    "ml": 12,
    "size": "l",
  },
  "IconBefore": Object {
    "mr": 12,
    "size": "m",
  },
  "Input": Object {
    "fontSize": "l",
    "height": "l",
    "pl": 12,
    "pr": 12,
  },
  "Prefix": Object {
    "mr": 8,
  },
}
`;

exports[`web theme Input fuzz: size="l" iconBefore={jsx} iconAfter={jsx} 1`] = `
Object {
  "IconAfter": Object {
    "ml": 12,
    "size": "l",
  },
  "IconBefore": Object {
    "mr": 12,
    "size": "m",
  },
  "Input": Object {
    "fontSize": "l",
    "height": "l",
    "pl": 12,
    "pr": 12,
  },
  "Prefix": Object {
    "mr": 8,
  },
}
`;

exports[`web theme Input fuzz: size="m" 1`] = `
Object {
  "IconAfter": Object {
    "ml": 10,
  },
  "IconBefore": Object {
    "mr": 10,
  },
  "Input": Object {
    "fontSize": "m",
    "height": "m",
    "pl": 10,
    "pr": 10,
  },
  "Prefix": Object {
    "mr": 6,
  },
}
`;

exports[`web theme Input fuzz: size="m" iconAfter={jsx} 1`] = `
Object {
  "IconAfter": Object {
    "ml": 10,
  },
  "IconBefore": Object {
    "mr": 10,
  },
  "Input": Object {
    "fontSize": "m",
    "height": "m",
    "pl": 10,
    "pr": 10,
  },
  "Prefix": Object {
    "mr": 6,
  },
}
`;

exports[`web theme Input fuzz: size="m" iconBefore={jsx} 1`] = `
Object {
  "IconAfter": Object {
    "ml": 10,
  },
  "IconBefore": Object {
    "mr": 10,
  },
  "Input": Object {
    "fontSize": "m",
    "height": "m",
    "pl": 10,
    "pr": 10,
  },
  "Prefix": Object {
    "mr": 6,
  },
}
`;

exports[`web theme Input fuzz: size="m" iconBefore={jsx} iconAfter={jsx} 1`] = `
Object {
  "IconAfter": Object {
    "ml": 10,
  },
  "IconBefore": Object {
    "mr": 10,
  },
  "Input": Object {
    "fontSize": "m",
    "height": "m",
    "pl": 10,
    "pr": 10,
  },
  "Prefix": Object {
    "mr": 6,
  },
}
`;

exports[`web theme Input fuzz: size="s" 1`] = `Object {}`;

exports[`web theme Input fuzz: size="s" iconAfter={jsx} 1`] = `Object {}`;

exports[`web theme Input fuzz: size="s" iconBefore={jsx} 1`] = `Object {}`;

exports[`web theme Input fuzz: size="s" iconBefore={jsx} iconAfter={jsx} 1`] = `Object {}`;

exports[`web theme Input fuzz: value="value" 1`] = `Object {}`;

exports[`web theme Input fuzz: value="value" clearable="always" 1`] = `
Object {
  "IconAfter": Object {
    "area": 10,
    "component": #IconCross,
  },
}
`;

exports[`web theme Input fuzz: variant="error" 1`] = `
Object {
  "Input": Object {
    "borderColor": "red500",
    "borderColorHover": "red600",
  },
}
`;

exports[`web theme Input fuzz: variant="primary" 1`] = `Object {}`;

exports[`web theme Input fuzz: variant="secondary" 1`] = `
Object {
  "Input": Object {
    "borderColor": "gray8",
    "borderColorHover": "gray16",
  },
}
`;

exports[`web theme Input fuzz: variant="success" 1`] = `
Object {
  "Input": Object {
    "borderColor": "green500",
    "borderColorHover": "green600",
  },
}
`;

exports[`web theme Input fuzz: variant="warning" 1`] = `
Object {
  "Input": Object {
    "borderColor": "orange500",
    "borderColorHover": "orange600",
  },
}
`;

exports[`web theme Input snap 1`] = `
Object {
  "defaultProps": Object {
    "deletePlaceholderOnFocus": true,
    "kind": "outline",
    "size": "s",
    "variant": "primary",
  },
  "mapProps": [Function],
  "scheme": Object {
    "IconAfter": Array [
      Object {
        "color": "gray28",
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "area": 10,
            "component": #IconCross,
            "size": [Function],
          },
        ],
      },
      Object {
        "ml": [Function],
        "size": [Function],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "component": #IconCross,
          },
        ],
      },
    ],
    "IconBefore": Array [
      Object {
        "color": "gray28",
        "size": [Function],
      },
      Object {
        "mr": [Function],
      },
    ],
    "Input": Array [
      Object {
        "focus": true,
        "height": [Function],
        "width": 1,
      },
      Object {
        "bgDisabled": "gray4",
        "borderRadius": 3,
        "borderStyle": "solid",
        "borderWidth": 1,
        "color": "black",
        "colorDisabled": "gray64",
        "cursor": "text",
        "fontSize": [Function],
        "pl": [Function],
        "placeholderColor": "gray40",
        "pr": [Function],
      },
      Object {
        "$switch": "variant",
        "error": Array [
          Object {
            "borderColor": "red500",
            "borderColorHover": "red600",
          },
        ],
        "primary": Array [
          Object {
            "borderColor": "gray20",
            "borderColorHover": "gray28",
          },
        ],
        "secondary": Array [
          Object {
            "borderColor": "gray8",
            "borderColorHover": "gray16",
          },
        ],
        "success": Array [
          Object {
            "borderColor": "green500",
            "borderColorHover": "green600",
          },
        ],
        "warning": Array [
          Object {
            "borderColor": "orange500",
            "borderColorHover": "orange600",
          },
        ],
      },
    ],
    "InputField": Array [
      Object {
        "grow": true,
        "valign": "middle",
      },
    ],
    "Postfix": Array [
      Object {
        "ml": 4,
      },
    ],
    "Prefix": Array [
      Object {
        "mr": [Function],
      },
    ],
  },
}
`;

exports[`web theme Link base 1`] = `
Object {
  "Link": Object {
    "color": "blue500",
    "colorHover": "red500",
    "colorVisited": "purple600",
  },
}
`;

exports[`web theme Link fuzz: variant="primary" 1`] = `Object {}`;

exports[`web theme Link fuzz: variant="secondary" 1`] = `
Object {
  "Link": Object {
    "color": "gray52",
    "colorHover": "gray32",
  },
}
`;

exports[`web theme Link snap 1`] = `
Object {
  "defaultProps": Object {
    "variant": "primary",
  },
  "mapProps": [Function],
  "scheme": Object {
    "Link": Array [
      Object {
        "colorVisited": "purple600",
      },
      Object {
        "$switch": "variant",
        "primary": Array [
          Object {
            "color": "blue500",
            "colorHover": "red500",
          },
        ],
        "secondary": Array [
          Object {
            "color": "gray52",
            "colorHover": "gray32",
          },
        ],
      },
    ],
  },
}
`;

exports[`web theme Radio base 1`] = `
Object {
  "Icon": Object {},
  "Label": Object {
    "ml": 6,
    "size": "s",
    "valignSelf": "middle",
  },
  "Switch": Object {
    "adjacentSelector": "input",
    "bg": "white",
    "bgDisabled": "gray4",
    "borderColor": "gray20",
    "borderColorDisabled": "gray20",
    "borderColorHover": "gray28",
    "borderStyle": "solid",
    "borderWidth": 1,
    "color": "white",
    "colorDisabled": "gray4",
    "focus": true,
    "height": 18,
    "shape": undefined,
    "shrink": false,
    "userSelect": false,
    "variant": "primary",
  },
  "Toggle": Object {
    "cursor": "pointer",
    "userSelect": false,
    "valign": "baseline",
  },
}
`;

exports[`web theme Radio fuzz: size="l" 1`] = `
Object {
  "Label": Object {
    "ml": 8,
    "size": "l",
  },
  "Switch": Object {
    "height": 24,
  },
}
`;

exports[`web theme Radio fuzz: size="m" 1`] = `
Object {
  "Label": Object {
    "ml": 8,
    "size": "m",
  },
  "Switch": Object {
    "height": 22,
  },
}
`;

exports[`web theme Radio fuzz: size="s" 1`] = `Object {}`;

exports[`web theme Radio fuzz: variant="error" checked 1`] = `
Object {
  "Icon": Object {
    "component": #IconRadioChecked,
  },
  "Switch": Object {
    "bg": "red500",
    "bgDisabled": "gray20",
    "bgHover": "red600",
    "borderColor": "red500",
    "borderColorHover": "red600",
    "variant": "error",
  },
}
`;

exports[`web theme Radio fuzz: variant="error" checked=false 1`] = `
Object {
  "Switch": Object {
    "borderColor": "red500",
    "borderColorHover": "red600",
    "variant": "error",
  },
}
`;

exports[`web theme Radio fuzz: variant="primary" checked 1`] = `
Object {
  "Icon": Object {
    "component": #IconRadioChecked,
  },
  "Switch": Object {
    "bg": "blue500",
    "bgDisabled": "gray20",
    "bgHover": "blue600",
    "borderColor": "blue500",
    "borderColorHover": "blue600",
  },
}
`;

exports[`web theme Radio fuzz: variant="primary" checked=false 1`] = `Object {}`;

exports[`web theme Radio fuzz: variant="secondary" checked 1`] = `
Object {
  "Icon": Object {
    "component": #IconRadioChecked,
  },
  "Switch": Object {
    "bg": "blue500",
    "bgDisabled": "gray20",
    "bgHover": "blue600",
    "borderColor": "blue500",
    "borderColorHover": "blue600",
    "variant": "secondary",
  },
}
`;

exports[`web theme Radio fuzz: variant="secondary" checked=false 1`] = `
Object {
  "Switch": Object {
    "borderColor": "gray8",
    "borderColorHover": "gray16",
    "variant": "secondary",
  },
}
`;

exports[`web theme Radio fuzz: variant="success" checked 1`] = `
Object {
  "Icon": Object {
    "component": #IconRadioChecked,
  },
  "Switch": Object {
    "bg": "green500",
    "bgDisabled": "gray20",
    "bgHover": "green600",
    "borderColor": "green500",
    "borderColorHover": "green600",
    "variant": "success",
  },
}
`;

exports[`web theme Radio fuzz: variant="success" checked=false 1`] = `
Object {
  "Switch": Object {
    "borderColor": "green500",
    "borderColorHover": "green600",
    "variant": "success",
  },
}
`;

exports[`web theme Radio fuzz: variant="warning" checked 1`] = `
Object {
  "Icon": Object {
    "component": #IconRadioChecked,
  },
  "Switch": Object {
    "bg": "orange500",
    "bgDisabled": "gray20",
    "bgHover": "orange600",
    "borderColor": "orange500",
    "borderColorHover": "orange600",
    "variant": "warning",
  },
}
`;

exports[`web theme Radio fuzz: variant="warning" checked=false 1`] = `
Object {
  "Switch": Object {
    "borderColor": "orange500",
    "borderColorHover": "orange600",
    "variant": "warning",
  },
}
`;

exports[`web theme Radio snap 1`] = `
Object {
  "defaultProps": Object {
    "labelPosition": "end",
    "size": "s",
    "variant": "primary",
  },
  "mapProps": [Function],
  "scheme": Object {
    "Icon": Array [
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "component": #IconRadioChecked,
          },
        ],
      },
    ],
    "Label": Array [
      Object {
        "size": "m",
      },
      Object {
        "size": [Function],
        "valignSelf": "middle",
      },
      Object {
        "$switch": "labelPosition",
        "end": Array [
          Object {
            "ml": [Function],
          },
        ],
        "start": Array [
          Object {
            "mr": [Function],
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "color": "gray40",
          },
        ],
      },
    ],
    "Switch": Array [
      Object {
        "adjacentSelector": "input",
        "shape": [Function],
        "shrink": false,
        "userSelect": false,
        "variant": [Function],
      },
      Object {
        "bg": "white",
        "borderColorDisabled": "gray20",
        "borderStyle": "solid",
        "borderWidth": 1,
        "colorDisabled": "gray4",
        "focus": true,
      },
      Object {
        "$switch": "variant",
        "error": Array [
          Object {
            "borderColor": "red500",
            "borderColorHover": "red600",
          },
        ],
        "primary": Array [
          Object {
            "borderColor": "gray20",
            "borderColorHover": "gray28",
          },
        ],
        "secondary": Array [
          Object {
            "borderColor": "gray8",
            "borderColorHover": "gray16",
          },
        ],
        "success": Array [
          Object {
            "borderColor": "green500",
            "borderColorHover": "green600",
          },
        ],
        "warning": Array [
          Object {
            "borderColor": "orange500",
            "borderColorHover": "orange600",
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "bgDisabled": "gray20",
          },
          Object {
            "$switch": "variant",
            "error": Array [
              Object {
                "bg": "red500",
                "bgHover": "red600",
                "borderColor": "red500",
                "borderColorHover": "red600",
              },
            ],
            "primary": Array [
              Object {
                "bg": "blue500",
                "bgHover": "blue600",
                "borderColor": "blue500",
                "borderColorHover": "blue600",
              },
            ],
            "secondary": Array [
              Object {
                "bg": "blue500",
                "bgHover": "blue600",
                "borderColor": "blue500",
                "borderColorHover": "blue600",
              },
            ],
            "success": Array [
              Object {
                "bg": "green500",
                "bgHover": "green600",
                "borderColor": "green500",
                "borderColorHover": "green600",
              },
            ],
            "warning": Array [
              Object {
                "bg": "orange500",
                "bgHover": "orange600",
                "borderColor": "orange500",
                "borderColorHover": "orange600",
              },
            ],
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "bgDisabled": "gray4",
          },
        ],
      },
      Object {
        "color": "white",
      },
      Object {
        "height": [Function],
      },
    ],
    "Toggle": Array [
      Object {
        "userSelect": false,
        "valign": "baseline",
      },
      Object {
        "cursor": "pointer",
      },
    ],
  },
}
`;

exports[`web theme Spinner base 1`] = `
Object {
  "Spinner": Object {
    "component": #IconSpinner,
    "size": 16,
  },
}
`;

exports[`web theme Spinner fuzz: size="l" 1`] = `
Object {
  "Spinner": Object {
    "size": 32,
  },
}
`;

exports[`web theme Spinner fuzz: size="m" 1`] = `
Object {
  "Spinner": Object {
    "size": 24,
  },
}
`;

exports[`web theme Spinner fuzz: size="s" 1`] = `Object {}`;

exports[`web theme Spinner fuzz: variant="error" 1`] = `Object {}`;

exports[`web theme Spinner fuzz: variant="primary" 1`] = `Object {}`;

exports[`web theme Spinner fuzz: variant="secondary" 1`] = `Object {}`;

exports[`web theme Spinner fuzz: variant="success" 1`] = `Object {}`;

exports[`web theme Spinner fuzz: variant="warning" 1`] = `Object {}`;

exports[`web theme Spinner snap 1`] = `
Object {
  "defaultProps": Object {
    "size": "s",
    "speed": 1,
    "variant": "primary",
  },
  "mapProps": [Function],
  "scheme": Object {
    "Spinner": Array [
      Object {
        "component": #IconSpinner,
        "size": [Function],
      },
      Object {
        "component": #IconSpinner,
      },
    ],
  },
}
`;

exports[`web theme Switcher base 1`] = `
Object {
  "Icon": Object {
    "bg": "white",
    "borderRadius": 2,
    "color": "blue500",
    "component": #Box,
    "height": 1,
    "pl": 2,
    "pr": 2,
    "width": 14,
  },
  "Label": Object {
    "ml": 6,
    "size": "s",
    "valignSelf": "middle",
  },
  "Switch": Object {
    "adjacentSelector": "input",
    "bg": "gray28",
    "bgDisabled": "gray8",
    "bgHover": "gray40",
    "borderColor": "gray20",
    "borderColorDisabled": "gray20",
    "borderColorHover": "gray28",
    "borderRadius": 2,
    "borderStyle": "solid",
    "borderWidth": 0,
    "colorDisabled": "gray4",
    "focus": true,
    "height": 20,
    "pb": 2,
    "pl": 2,
    "pr": 2,
    "pt": 2,
    "shape": "square",
    "shrink": false,
    "userSelect": false,
    "variant": "primary",
    "width": 40,
  },
  "Toggle": Object {
    "cursor": "pointer",
    "userSelect": false,
    "valign": "baseline",
  },
}
`;

exports[`web theme Switcher fuzz: checked loading disabled 1`] = `
Object {
  "Icon": Object {
    "component": #Spinner,
    "size": "auto",
  },
  "Label": Object {
    "color": "gray40",
  },
  "Switch": Object {
    "bg": "blue500",
    "bgDisabled": "gray20",
    "bgHover": "blue600",
    "borderColor": "blue500",
    "borderColorHover": "blue600",
  },
}
`;

exports[`web theme Switcher fuzz: checked loading disabled=false 1`] = `
Object {
  "Icon": Object {
    "component": #Spinner,
    "size": "auto",
  },
  "Switch": Object {
    "bg": "blue500",
    "bgDisabled": "gray20",
    "bgHover": "blue600",
    "borderColor": "blue500",
    "borderColorHover": "blue600",
  },
}
`;

exports[`web theme Switcher fuzz: checked loading=false disabled 1`] = `
Object {
  "Label": Object {
    "color": "gray40",
  },
  "Switch": Object {
    "bg": "blue500",
    "bgDisabled": "gray20",
    "bgHover": "blue600",
    "borderColor": "blue500",
    "borderColorHover": "blue600",
  },
}
`;

exports[`web theme Switcher fuzz: checked loading=false disabled=false 1`] = `
Object {
  "Switch": Object {
    "bg": "blue500",
    "bgDisabled": "gray20",
    "bgHover": "blue600",
    "borderColor": "blue500",
    "borderColorHover": "blue600",
  },
}
`;

exports[`web theme Switcher fuzz: checked=false loading disabled 1`] = `
Object {
  "Icon": Object {
    "component": #Spinner,
    "size": "auto",
  },
  "Label": Object {
    "color": "gray40",
  },
}
`;

exports[`web theme Switcher fuzz: checked=false loading disabled=false 1`] = `
Object {
  "Icon": Object {
    "component": #Spinner,
    "size": "auto",
  },
}
`;

exports[`web theme Switcher fuzz: checked=false loading=false disabled 1`] = `
Object {
  "Label": Object {
    "color": "gray40",
  },
}
`;

exports[`web theme Switcher fuzz: checked=false loading=false disabled=false 1`] = `Object {}`;

exports[`web theme Switcher fuzz: size="l" 1`] = `
Object {
  "Icon": Object {
    "width": 22,
  },
  "Label": Object {
    "ml": 8,
    "size": "l",
  },
  "Switch": Object {
    "height": 28,
    "width": 56,
  },
}
`;

exports[`web theme Switcher fuzz: size="m" 1`] = `
Object {
  "Icon": Object {
    "width": 18,
  },
  "Label": Object {
    "ml": 8,
    "size": "m",
  },
  "Switch": Object {
    "height": 24,
    "width": 48,
  },
}
`;

exports[`web theme Switcher fuzz: size="s" 1`] = `Object {}`;

exports[`web theme Switcher fuzz: variant="error" checked 1`] = `
Object {
  "Icon": Object {
    "color": "red500",
  },
  "Switch": Object {
    "bg": "red500",
    "bgDisabled": "gray20",
    "bgHover": "red600",
    "borderColor": "red500",
    "borderColorHover": "red600",
    "variant": "error",
  },
}
`;

exports[`web theme Switcher fuzz: variant="error" checked=false 1`] = `
Object {
  "Icon": Object {
    "color": "red500",
  },
  "Switch": Object {
    "borderColor": "red500",
    "borderColorHover": "red600",
    "variant": "error",
  },
}
`;

exports[`web theme Switcher fuzz: variant="primary" checked 1`] = `
Object {
  "Switch": Object {
    "bg": "blue500",
    "bgDisabled": "gray20",
    "bgHover": "blue600",
    "borderColor": "blue500",
    "borderColorHover": "blue600",
  },
}
`;

exports[`web theme Switcher fuzz: variant="primary" checked=false 1`] = `Object {}`;

exports[`web theme Switcher fuzz: variant="secondary" checked 1`] = `
Object {
  "Switch": Object {
    "bg": "blue500",
    "bgDisabled": "gray20",
    "bgHover": "blue600",
    "borderColor": "blue500",
    "borderColorHover": "blue600",
    "variant": "secondary",
  },
}
`;

exports[`web theme Switcher fuzz: variant="secondary" checked=false 1`] = `
Object {
  "Switch": Object {
    "borderColor": "gray8",
    "borderColorHover": "gray16",
    "variant": "secondary",
  },
}
`;

exports[`web theme Switcher fuzz: variant="success" checked 1`] = `
Object {
  "Icon": Object {
    "color": "green500",
  },
  "Switch": Object {
    "bg": "green500",
    "bgDisabled": "gray20",
    "bgHover": "green600",
    "borderColor": "green500",
    "borderColorHover": "green600",
    "variant": "success",
  },
}
`;

exports[`web theme Switcher fuzz: variant="success" checked=false 1`] = `
Object {
  "Icon": Object {
    "color": "green500",
  },
  "Switch": Object {
    "borderColor": "green500",
    "borderColorHover": "green600",
    "variant": "success",
  },
}
`;

exports[`web theme Switcher fuzz: variant="warning" checked 1`] = `
Object {
  "Icon": Object {
    "color": "orange500",
  },
  "Switch": Object {
    "bg": "orange500",
    "bgDisabled": "gray20",
    "bgHover": "orange600",
    "borderColor": "orange500",
    "borderColorHover": "orange600",
    "variant": "warning",
  },
}
`;

exports[`web theme Switcher fuzz: variant="warning" checked=false 1`] = `
Object {
  "Icon": Object {
    "color": "orange500",
  },
  "Switch": Object {
    "borderColor": "orange500",
    "borderColorHover": "orange600",
    "variant": "warning",
  },
}
`;

exports[`web theme Switcher snap 1`] = `
Object {
  "defaultProps": Object {
    "labelPosition": "end",
    "positionLoading": true,
    "shape": "square",
    "size": "s",
    "variant": "primary",
  },
  "mapProps": [Function],
  "scheme": Object {
    "Icon": Array [
      Object {
        "bg": "white",
        "borderRadius": 2,
        "color": [Function],
        "component": #Box,
        "height": 1,
        "pl": 2,
        "pr": 2,
        "width": [Function],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "component": #Spinner,
            "size": "auto",
          },
        ],
      },
    ],
    "Label": Array [
      Object {
        "size": "m",
      },
      Object {
        "size": [Function],
        "valignSelf": "middle",
      },
      Object {
        "$switch": "labelPosition",
        "end": Array [
          Object {
            "ml": [Function],
          },
        ],
        "start": Array [
          Object {
            "mr": [Function],
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "color": "gray40",
          },
        ],
      },
    ],
    "Switch": Array [
      Object {
        "adjacentSelector": "input",
        "shape": [Function],
        "shrink": false,
        "userSelect": false,
        "variant": [Function],
      },
      Object {
        "bg": "white",
        "borderColorDisabled": "gray20",
        "borderStyle": "solid",
        "borderWidth": 1,
        "colorDisabled": "gray4",
        "focus": true,
      },
      Object {
        "$switch": "variant",
        "error": Array [
          Object {
            "borderColor": "red500",
            "borderColorHover": "red600",
          },
        ],
        "primary": Array [
          Object {
            "borderColor": "gray20",
            "borderColorHover": "gray28",
          },
        ],
        "secondary": Array [
          Object {
            "borderColor": "gray8",
            "borderColorHover": "gray16",
          },
        ],
        "success": Array [
          Object {
            "borderColor": "green500",
            "borderColorHover": "green600",
          },
        ],
        "warning": Array [
          Object {
            "borderColor": "orange500",
            "borderColorHover": "orange600",
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "bgDisabled": "gray20",
          },
          Object {
            "$switch": "variant",
            "error": Array [
              Object {
                "bg": "red500",
                "bgHover": "red600",
                "borderColor": "red500",
                "borderColorHover": "red600",
              },
            ],
            "primary": Array [
              Object {
                "bg": "blue500",
                "bgHover": "blue600",
                "borderColor": "blue500",
                "borderColorHover": "blue600",
              },
            ],
            "secondary": Array [
              Object {
                "bg": "blue500",
                "bgHover": "blue600",
                "borderColor": "blue500",
                "borderColorHover": "blue600",
              },
            ],
            "success": Array [
              Object {
                "bg": "green500",
                "bgHover": "green600",
                "borderColor": "green500",
                "borderColorHover": "green600",
              },
            ],
            "warning": Array [
              Object {
                "bg": "orange500",
                "bgHover": "orange600",
                "borderColor": "orange500",
                "borderColorHover": "orange600",
              },
            ],
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "bgDisabled": "gray4",
          },
        ],
      },
      Object {
        "borderRadius": 2,
        "borderWidth": 0,
        "pb": 2,
        "pl": 2,
        "pr": 2,
        "pt": 2,
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "bg": "gray28",
            "bgDisabled": "gray8",
            "bgHover": "gray40",
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "bgDisabled": "gray20",
          },
        ],
      },
      Object {
        "$switch": "size",
        "l": Array [
          Object {
            "height": 28,
            "width": 56,
          },
        ],
        "m": Array [
          Object {
            "height": 24,
            "width": 48,
          },
        ],
        "s": Array [
          Object {
            "height": 20,
            "width": 40,
          },
        ],
      },
    ],
    "Toggle": Array [
      Object {
        "userSelect": false,
        "valign": "baseline",
      },
      Object {
        "cursor": "pointer",
      },
    ],
  },
}
`;

exports[`web theme Text base 1`] = `
Object {
  "Text": Object {
    "color": undefined,
    "fontSize": undefined,
    "lineHeight": "normal",
  },
}
`;

exports[`web theme Text fuzz: dense 1`] = `
Object {
  "Text": Object {
    "lineHeight": "dense",
  },
}
`;

exports[`web theme Text fuzz: preset="heading" 1`] = `
Object {
  "Text": Object {
    "fontSize": "l",
  },
}
`;

exports[`web theme Text fuzz: preset="heading-large" 1`] = `
Object {
  "Text": Object {
    "fontSize": "xl",
  },
}
`;

exports[`web theme Text fuzz: preset="heading-small" 1`] = `
Object {
  "Text": Object {
    "fontSize": "m",
  },
}
`;

exports[`web theme Text fuzz: preset="title" 1`] = `
Object {
  "Text": Object {
    "fontSize": "xxxl",
  },
}
`;

exports[`web theme Text fuzz: preset="title-small" 1`] = `
Object {
  "Text": Object {
    "fontSize": "xxl",
  },
}
`;

exports[`web theme Text fuzz: size="l" 1`] = `
Object {
  "Text": Object {
    "fontSize": "l",
  },
}
`;

exports[`web theme Text fuzz: size="m" 1`] = `
Object {
  "Text": Object {
    "fontSize": "m",
  },
}
`;

exports[`web theme Text fuzz: size="s" 1`] = `
Object {
  "Text": Object {
    "fontSize": "s",
  },
}
`;

exports[`web theme Text fuzz: variant="error" 1`] = `
Object {
  "Text": Object {
    "color": "red500",
  },
}
`;

exports[`web theme Text fuzz: variant="primary" 1`] = `
Object {
  "Text": Object {
    "color": "blue500",
  },
}
`;

exports[`web theme Text fuzz: variant="secondary" 1`] = `
Object {
  "Text": Object {
    "color": "gray52",
  },
}
`;

exports[`web theme Text fuzz: variant="success" 1`] = `
Object {
  "Text": Object {
    "color": "green500",
  },
}
`;

exports[`web theme Text fuzz: variant="warning" 1`] = `
Object {
  "Text": Object {
    "color": "yellow500",
  },
}
`;

exports[`web theme Text snap 1`] = `
Object {
  "mapProps": [Function],
  "scheme": Object {
    "Text": Array [
      Object {
        "color": [Function],
        "fontSize": [Function],
        "lineHeight": "normal",
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "lineHeight": "dense",
          },
        ],
      },
    ],
  },
}
`;

exports[`web theme Textarea base 1`] = `
Object {
  "IconClear": Object {
    "area": 10,
    "color": "gray28",
    "component": #IconCross,
    "size": "s",
    "visible": false,
  },
  "Textarea": Object {
    "bgDisabled": "gray4",
    "borderColor": "gray20",
    "borderColorHover": "gray28",
    "borderRadius": 3,
    "borderStyle": "solid",
    "borderWidth": 1,
    "color": "black",
    "colorDisabled": "gray64",
    "cursor": "text",
    "focus": true,
    "fontSize": "s",
    "lineHeight": "normal",
    "minHeight": "s",
    "pb": 7,
    "pl": 4,
    "placeholderColor": "gray40",
    "pr": 4,
    "pt": 7,
    "valign": "top",
  },
}
`;

exports[`web theme Textarea fuzz: clearable="always" 1`] = `
Object {
  "IconClear": Object {
    "visible": true,
  },
}
`;

exports[`web theme Textarea fuzz: size="l" 1`] = `
Object {
  "IconClear": Object {
    "size": "l",
  },
  "Textarea": Object {
    "fontSize": "l",
    "minHeight": "l",
    "pb": 8,
    "pl": 12,
    "pr": 12,
    "pt": 8,
  },
}
`;

exports[`web theme Textarea fuzz: size="m" 1`] = `
Object {
  "IconClear": Object {
    "size": "m",
  },
  "Textarea": Object {
    "fontSize": "m",
    "minHeight": "m",
    "pb": 6,
    "pl": 10,
    "pr": 10,
    "pt": 6,
  },
}
`;

exports[`web theme Textarea fuzz: size="s" 1`] = `Object {}`;

exports[`web theme Textarea fuzz: value="value" 1`] = `Object {}`;

exports[`web theme Textarea fuzz: value="value" clearable="always" 1`] = `
Object {
  "IconClear": Object {
    "visible": true,
  },
}
`;

exports[`web theme Textarea fuzz: variant="error" 1`] = `
Object {
  "Textarea": Object {
    "borderColor": "red500",
    "borderColorHover": "red600",
  },
}
`;

exports[`web theme Textarea fuzz: variant="primary" 1`] = `Object {}`;

exports[`web theme Textarea fuzz: variant="secondary" 1`] = `
Object {
  "Textarea": Object {
    "borderColor": "gray8",
    "borderColorHover": "gray16",
  },
}
`;

exports[`web theme Textarea fuzz: variant="success" 1`] = `
Object {
  "Textarea": Object {
    "borderColor": "green500",
    "borderColorHover": "green600",
  },
}
`;

exports[`web theme Textarea fuzz: variant="warning" 1`] = `
Object {
  "Textarea": Object {
    "borderColor": "orange500",
    "borderColorHover": "orange600",
  },
}
`;

exports[`web theme Textarea snap 1`] = `
Object {
  "defaultProps": Object {
    "deletePlaceholderOnFocus": true,
    "size": "s",
    "variant": "primary",
  },
  "mapProps": [Function],
  "scheme": Object {
    "IconClear": Array [
      Object {
        "area": 10,
        "color": "gray28",
        "component": #IconCross,
        "size": [Function],
        "visible": [Function],
      },
      Object {
        "component": #IconCross,
      },
    ],
    "Textarea": Array [
      Object {
        "focus": true,
        "lineHeight": "normal",
        "minHeight": [Function],
        "valign": "top",
      },
      Object {
        "bgDisabled": "gray4",
        "borderRadius": 3,
        "borderStyle": "solid",
        "borderWidth": 1,
        "color": "black",
        "colorDisabled": "gray64",
        "cursor": "text",
        "fontSize": [Function],
        "placeholderColor": "gray40",
      },
      Object {
        "$switch": "size",
        "l": Array [
          Object {
            "pb": 8,
            "pl": 12,
            "pr": 12,
            "pt": 8,
          },
        ],
        "m": Array [
          Object {
            "pb": 6,
            "pl": 10,
            "pr": 10,
            "pt": 6,
          },
        ],
        "s": Array [
          Object {
            "pb": 7,
            "pl": 4,
            "pr": 4,
            "pt": 7,
          },
        ],
      },
      Object {
        "$switch": "variant",
        "error": Array [
          Object {
            "borderColor": "red500",
            "borderColorHover": "red600",
          },
        ],
        "primary": Array [
          Object {
            "borderColor": "gray20",
            "borderColorHover": "gray28",
          },
        ],
        "secondary": Array [
          Object {
            "borderColor": "gray8",
            "borderColorHover": "gray16",
          },
        ],
        "success": Array [
          Object {
            "borderColor": "green500",
            "borderColorHover": "green600",
          },
        ],
        "warning": Array [
          Object {
            "borderColor": "orange500",
            "borderColorHover": "orange600",
          },
        ],
      },
    ],
  },
}
`;
